# Gravity-Protocol

./: Cargo.toml
contracts/allocation/: Cargo.toml
contracts/allocation/src/: lib.rs
contracts/rebalance/: Cargo.toml
contracts/rebalance/src/: lib.rs  test.rs
contracts/rebalance/test_snapshots/test/: test_vault_and_rebalance_integration.1.json
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs
contracts/vault/src/: lib.rs
frontend/: animation  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/components/: allocation-card.tsx  antigravity-bg.tsx  bento-grid.tsx  fund-card.tsx  interaction-card.tsx  layerzero-bg.tsx  liquid-background.tsx  navbar.tsx  portfolio-card.tsx  specular-card.tsx  typewriter.tsx
frontend/src/hooks/: useGravityProtocol.ts
frontend/src/lib/: allocation.ts  freighter.ts  stellar.ts  vault.ts
