[package]
name = "rebalance"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
vault = { path = "../vault" }
allocation = { path = "../allocation" }
settlement = { path = "../settlement" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
